# ai_engineer_journey

./: .gitignore  Makefile  README.md  ai_chat.py  app.py  chunk_metadata_v2.json  packages.txt  pyproject.toml  rag_system.py  rag_system_enhanced.py  rag_system_enhanced_v2.py  rag_system_simple.py  rag_system_v3.py  requirements.txt  research_agent.py  runtime.txt  token_counter.py
tests/: test_rag.py  test_rag_v2.py
