[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-qa"
version = "1.0.0"
description = "A RAG system for PDF Q&A with source tracking."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Fahim", email = "rahilislam72@gmail.com" }
]
keywords = ["rag", "nlp", "document-qa", "streamlit", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit",
    "sentence-transformers",
    "pypdf",
    "groq",
    "python-dotenv",
    "scikit-learn",
    "pandas",
    "torch",
    "transformers",
]

[project.urls]
Homepage = "https://github.com/fantasticfahim/ai_engineer_journey"
Repository = "https://github.com/fantasticfahim/ai_engineer_journey"
Demo = "https://aiengineerjourney-kqgj4p4d26unfa2cohkwsw.streamlit.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100